# benxu-dev

./: .gitignore  Cargo.toml  LICENSE  README.md  compile.sh  compile_and_deploy.sh
benxu-dev-blog-client/: Cargo.toml
benxu-dev-page-home-script/: Cargo.toml  compile.sh
benxu-dev-page-home-script/src/: lib.rs
benxu-dev-server/: Cargo.toml  build.rs  build_for_deploy.sh
benxu-dev-server/public/css/: index.css  main.css  reset.css  typography.css
benxu-dev-server/public/js/wasm-bindgen-glue/: benxu_dev_page_home_script.js
benxu-dev-server/public/wasm/: benxu_dev_page_home_script_bg.wasm
benxu-dev-server/src/: main.rs
benxu-dev-server/src/routing/: mod.rs
benxu-dev-server/src/routing/blog/: mod.rs
blog-client/: Cargo.toml  compile.sh  deps.txt
blog-client/src/: lib.rs  locations.rs  logging.rs  main.rs  messages.rs  model.rs  requests.rs  shared.rs
blog-client/src/locations/: editor.rs  home.rs  listing.rs  login.rs  viewer.rs
blog-client/src/locations/editor/: messages.rs  state.rs  views.rs
blog-client/src/locations/listing/: messages.rs  state.rs  views.rs
blog-client/src/locations/login/: messages.rs  state.rs  views.rs
blog-client/src/locations/viewer/: messages.rs  state.rs  views.rs
blog-client/src/shared/: retry.rs  views.rs
blog-client/src/shared/retry/: error.rs
blog-client/src/shared/views/: loading.rs
blog-db/: .env  Cargo.toml
blog-db/migrations/2019-08-02-044137_create_major_tables/: down.sql  up.sql
blog-db/migrations/2020-05-04-184335_rename_permission_to_capability/: down.sql  up.sql
blog-db/src/: lib.rs  models.rs  query.rs  rocket.rs  schema.rs
blog-db/src/models/: capabilities.rs  credentials.rs  mod.rs  permissions.rs  post_tag_junctions.rs  posts.rs  tags.rs  users.rs
clients/blog/: Cargo.toml
clients/blog/src/: editor.rs  lib.rs  main.rs  post.rs  post_list.rs  world.rs
clients/slideshow/: Cargo.toml
clients/slideshow/src/: lib.rs
crypto/: Cargo.toml
crypto/src/: encoding.rs  key_rotation.rs  lib.rs
crypto/src/algo/: mod.rs
crypto/src/algo/cipher/: asymmetric.rs  mod.rs  plaintext.rs  symmetric.rs
crypto/src/algo/cipher/aes256/: ctr.rs
crypto/src/algo/cipher/xchacha20/: poly1305.rs
crypto/src/algo/hash/: asymmetric.rs  mod.rs  symmetric.rs
crypto/src/algo/hash/argon2/: d.rs  mod.rs
crypto/src/algo/hash/bcrypt/: mod.rs
crypto/src/algo/hash/blake/: mod.rs  two_b.rs
crypto/src/algo/hash/ecc/: ed25519.rs
crypto/src/algo/hash/hmac/: mod.rs  sha384.rs
crypto/src/algo/hash/rsa/: pss_sha384_mgf1_65537.rs
crypto/src/algo/key_deriv/hkdf/: sha384.rs
crypto/src/encoding/base64/: mod.rs
crypto/src/token/: jwe.rs  mod.rs  paseto.rs
crypto/src/token/paseto/: error.rs  mod.rs  token.rs  v1.rs  v2.rs
crypto/src/token/paseto/v1/: local.rs  mod.rs  nonce.rs  public.rs
crypto/src/token/paseto/v1/local/: decryption.rs  encryption.rs  error.rs  mod.rs
crypto/src/token/paseto/v1/public/: decryption.rs  encryption.rs  error.rs  mod.rs
crypto/src/token/paseto/v2/: local.rs  mod.rs  public.rs
crypto/src/token/paseto/v2/local/: decryption.rs  encryption.rs  error.rs  mod.rs  nonce.rs
crypto/src/token/paseto/v2/public/: decryption.rs  encryption.rs  error.rs  mod.rs
lib/static-page-builder/: Cargo.toml
lib/static-page-builder/src/: data.rs
page-client/: Cargo.toml
page-client/src/: data.rs  lib.rs  partials.rs
server/: .env  Cargo.toml  Rocket.toml  build.rs  generate_grant_super_user_sql_query.py
server/public/css/: blog.css  index.css  main.css  typography.css
server/public/js/wasm-bindgen-glue/: benxu_dev_page_home_script.js
server/public/wasm/: benxu_dev_page_home_script_bg.wasm
server/src/: cfg.rs  main.rs  urls.rs  util.rs  uuid_conv.rs
server/src/blog/: accounts.rs  auth.rs  db.rs  mod.rs  posts.rs
server/src/blog/accounts/: error.rs  mod.rs
server/src/blog/auth/: error.rs  mod.rs  permissions.rs
server/src/blog/credentials/: data.rs  mod.rs
server/src/blog/login/: data.rs  error.rs  mod.rs
server/src/blog/permissions/: data.rs  error.rs  mod.rs
server/src/blog/posts/: error.rs  mod.rs
server/src/crypto/: key_rotation.rs  mod.rs
server/src/crypto/algo/: mod.rs
server/src/crypto/algo/cipher/: asymmetric.rs  mod.rs  plaintext.rs  symmetric.rs
server/src/crypto/algo/cipher/aes256/: ctr.rs  mod.rs
server/src/crypto/algo/cipher/xchacha20/: poly1305.rs
server/src/crypto/algo/hash/: asymmetric.rs  mod.rs  symmetric.rs
server/src/crypto/algo/hash/argon2/: d.rs  mod.rs
server/src/crypto/algo/hash/bcrypt/: mod.rs
server/src/crypto/algo/hash/blake/: mod.rs  two_b.rs
server/src/crypto/algo/hash/ecc/: ed25519.rs
server/src/crypto/algo/hash/hmac/: sha384.rs
server/src/crypto/algo/hash/rsa/: mod.rs  pss_sha384_mgf1_65537.rs
server/src/crypto/algo/key_deriv/: mod.rs
server/src/crypto/algo/key_deriv/hkdf/: mod.rs  sha384.rs
server/src/crypto/token/paseto/: error.rs  mod.rs  token.rs
server/src/crypto/token/paseto/v1/: local.rs  mod.rs  nonce.rs
server/src/crypto/token/paseto/v2/: mod.rs  public.rs
server/src/encoding/base64/: mod.rs
server/src/fixed/: contacts.rs  links.rs  mod.rs  projects.rs  resume.rs
server/src/routing/: contacts.rs  links.rs
server/src/urls/: blog.rs  fixed.rs
server/src/urls/blog/: accounts.rs  capabilities.rs  credentials.rs  login.rs  permissions.rs  posts.rs
server/src/urls/blog/capabilities/: data.rs  error.rs
server/src/urls/blog/credentials/: data.rs  pws.rs
server/src/urls/blog/credentials/pws/: data.rs
server/src/urls/blog/login/: data.rs
server/src/urls/blog/permissions/: data.rs  error.rs
server/src/urls/fixed/: projects.rs  resume.rs
server/src/util/: auth.rs  blog.rs  uuid_compat.rs
server/src/util/auth/: capabilities.rs  credentials.rs  error.rs  permissions.rs
servers/static-server/: Cargo.toml
servers/static-server/src/: blog.rs  favicon.rs  internal_error.rs  landing.rs  main.rs  not_found.rs  resume.rs  static_file.rs
static-page-builder/: Cargo.toml
static-page-builder/src/: partials.rs
wasm-script/: Cargo.toml  compile.sh
wasm-script/src/: lib.rs
(+43 files in other folders)
