[workspace]
resolver = "2"
members = [
    "servers/static-server",
    "clients/slideshow",
    # "clients/blog-client",

    # Site specific cfg.
    "shared-config",

    # Underlying libraries.
    "static-page-builder",
    "web-sys-bridge",
]

[profile.wasm]
inherits = "release"
lto = true
opt-level = 3
