[package]
name = "benxu-dev-server"
version = "0.1.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
benxu-dev-page-client = { path = "../benxu-dev-page-client" }
serde = { version = "1.0.94", features = ["derive"] }
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", default-features = false, features = ["json", "serve"] }
maud = { version = "0.21.0", features = ["rocket"] }
chrono = { version = "0.4.7", features = ["serde"] }

