[package]
name = "blog-client"
version = "0.1.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A frontend for a blog utilizing WASM."
repository = "https://github.com/AlterionX/benxu-dev"

[lib]
crate-type = ["cdylib"]

[dependencies]
boolinator = "2.4.0"
tap = "0.4.0"
percent-encoding = "2.1.0"
futures = "0.1.29"
wasm-bindgen = "0.2.51"
js-sys = "0.3.28"
log = "0.4.8"
console_log = "0.1.2"
fern = "0.5.8"

[dependencies.db-models]
package = "blog-db"
version = "0.1.0"
path = "../blog-db"
features = ["client"]
[dependencies.htmlgen]
package = "static-page-builder"
version = "0.1.0"
path = "../page-client"
default-features = false
[dependencies.login-enum]
package = "blog-login-enum"
version = "0.1.0"
path = "../blog-login-enum"

[dependencies.seed]
version = "0.4.1"
# git = "https://github.com/David-OConnor/seed.git"
path = "../../seed"
[dependencies.serde]
version = "1.0.101"
features = ["derive"]
[dependencies.uuid]
version = "0.7.4"
features = ["serde", "wasm-bindgen"]
[dependencies.chrono]
version = "0.4.9"
features = ["serde", "wasmbind"]
[dependencies.web-sys]
version = "0.3.28"
features = [
      'Document',
      'Element',
      'HtmlElement',
      'Node',
      'NodeList',
      'Window',
      'CssStyleDeclaration',
      'EventTarget',
      'EventListener',
      'UiEvent',
      'DomTokenList',
      'Location',
      'History',
]

