[package]
name = "blog-client"
version = "0.3.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A frontend for a blog utilizing WASM."
repository = "https://github.com/AlterionX/benxu-dev"

[lib]
crate-type = ["cdylib"]

[features]
# TODO
# client = ["js-sys", "console_log", "wasm-bindgen", "web-sys", "db-models/client", "seed"]
# server = []

[dependencies.boolinator]
version = "2.4.0"
[dependencies.tap]
version = "0.4.0"

[dependencies.percent-encoding]
version = "2.1.0"
[dependencies.log]
version = "0.4.8"
[dependencies.fern]
version = "0.6.0"

[dependencies.db-models]
package = "blog-db"
version = "0.3.0"
path = "../blog-db"
features = ["client"]
[dependencies.htmlgen]
package = "static-page-builder"
version = "0.2.1"
path = "../page-client"
[dependencies.login-enum]
package = "blog-login-enum"
version = "0.1.1"
path = "../blog-login-enum"

[dependencies.serde]
version = "1.0.106"
features = ["derive"]
[dependencies.uuid]
version = "0.8.1"
features = ["serde", "wasm-bindgen"]
[dependencies.chrono]
version = "0.4.11"
features = ["serde", "wasmbind"]

# Front end specific dependencies
[dependencies.seed]
version = "0.6.0"
# git = "https://github.com/David-OConnor/seed.git"
# path = "../../seed"
[dependencies.js-sys]
version = "0.3.39"
[dependencies.console_log]
version = "0.2.0"
[dependencies.wasm-bindgen]
version = "0.2.62"
[dependencies.wasm-bindgen-futures]
version = "0.4.12"
[dependencies.web-sys]
version = "0.3.39"
features = [
      'Document',
      'Element',
      'HtmlElement',
      'Node',
      'NodeList',
      'Window',
      'CssStyleDeclaration',
      'EventTarget',
      'EventListener',
      'UiEvent',
      'DomTokenList',
      'Location',
      'History',
]

[profile.release]
lto = true
opt-level = 's'
