[package]
name = "blog-db"
version = "0.1.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A set of migration scripts and structs for interacting with the database of a blog."
repository = "https://github.com/AlterionX/benxu-dev"

[features]
default = ["diesel", "dotenv"]
client-side = []

[dependencies]
chrono = { version = "0.4.9", features = ["serde"] }
serde = { version = "1.0.101", features = ["derive"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }

diesel = { version = "1.4.2", features = ["postgres", "chrono", "uuidv07"], optional = true }
dotenv = { version = "0.14.1", optional = true }

