[package]
name = "blog-db"
version = "0.1.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A set of migration scripts and structs for interacting with the database of a blog."
repository = "https://github.com/AlterionX/benxu-dev"

[features]
server = ["diesel", "rocket", "rocket_contrib", "uuid/v4", "log"]
client = []

[dependencies.chrono]
version = "0.4.9"
features = ["serde"]
[dependencies.serde]
version = "1.0.101"
features = ["derive"]
[dependencies.uuid]
version = "0.7.4"
features = ["serde"]

[dependencies.diesel]
version = "1.4.2"
features = ["postgres", "chrono", "uuidv07"]
optional = true
[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
optional = true
features = ["diesel_postgres_pool"]
[dependencies.rocket]
version = "0.4.2"
optional = true
[dependencies.log]
version = "0.4.8"
features = ["std", "serde"]
optional = true
