[package]
name = "blog-db"
version = "0.2.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A set of migration scripts and structs for interacting with the database of a blog."
repository = "https://github.com/AlterionX/benxu-dev"

[features]
server = ["diesel", "rocket", "rocket_contrib", "uuid/v4", "log"]
client = []

[dependencies.chrono]
version = "0.4.11"
features = ["serde"]
[dependencies.serde]
version = "1.0.106"
features = ["derive"]
[dependencies.uuid]
version = "0.8.1"
features = ["serde"]

[dependencies.diesel]
version = "1.4.4"
features = ["postgres", "chrono", "uuidv07"]
optional = true
[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
optional = true
features = ["diesel_postgres_pool"]
[dependencies.rocket]
version = "0.4.4"
optional = true
[dependencies.log]
version = "0.4.8"
features = ["std", "serde"]
optional = true
