[package]
name = "bundled-crypto"
version = "0.1.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A collection of bundled crypto algorithms, encoding algorithms, and an implementation of the PASETO version protocol."
# documentation = ""
# homepage = ""
repository = "https://github.com/AlterionX/benxu-dev"

[dependencies]
# various crypto algos
ring = { version = "0.13.5", features = ["rsa_signing"] }
openssl = "0.10.24"
rand = "0.7.0"
sodiumoxide = "0.2.4"
hex = "0.3.2"
base64 = "0.10.1"
untrusted = "0.6.2"
blake2-rfc = "0.2.18"
bcrypt = "0.5.0"
argon2rs = "0.2.5"
# convenience
boolinator = "2.4.0"
# token
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
# utility
log = { version = "0.4", features = ["std", "serde"] }

