[package]
name = "bundled-crypto"
version = "0.2.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A collection of bundled crypto algorithms, encoding algorithms, and an implementation of the PASETO version protocol."
# documentation = ""
# homepage = ""
repository = "https://github.com/AlterionX/benxu-dev"

[dependencies]
# various crypto algos
# ring = { version = "0.16.9", features = ["rsa_signing"] }
ring = { version = "0.13.5", features = ["rsa_signing"] }
openssl = "0.10.26"
rand = "0.7.2"
sodiumoxide = "0.2.5"
hex = "0.4.0"
base64 = "0.11.0"
untrusted = "0.7.0"
blake2-rfc = "0.2.18"
bcrypt = "0.6.1"
argon2rs = "0.2.5"
# convenience
boolinator = "2.4.0"
# token
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.41"
# utility
log = { version = "0.4.8", features = ["std", "serde"] }

