[package]
name = "bundled-crypto"
version = "0.2.1"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A collection of bundled crypto algorithms, encoding algorithms, and an implementation of the PASETO version protocol."
# documentation = ""
# homepage = ""
repository = "https://github.com/AlterionX/benxu-dev"

[dependencies]
# various crypto algos
# ring = "0.16.13"
ring = { version = "0.13.5", features = ["rsa_signing"] }
openssl = "0.10.29"
rand = "0.7.3"
sodiumoxide = "0.2.5"
hex = "0.4.2"
base64 = "0.12.1"
untrusted = "0.7.1"
blake2-rfc = "0.2.18"
bcrypt = "0.6.1"
argon2rs = "0.2.5"
# convenience
boolinator = "2.4.0"
# token
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# utility
log = { version = "0.4.8", features = ["std", "serde"] }
tap = "0.4.0"

