[package]
name = "static-page-builder"
version = "0.2.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Provides a set of utilities to build static pages. Built off of maud."
repository = "https://github.com/AlterionX/benxu-dev"

[features]
rocket = ["maud/rocket"]

[dependencies]
maud = "0.21.0"
typed-builder = "0.3.0"
[dependencies.chrono]
version = "0.4.11"
features = ["serde"]
[dependencies.serde]
version = "1.0.106"
features = ["derive"]

