[package]
name = "benxu"
version = "0.1.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"
license = "MIT"
build = "build.rs"
description = "Joins a variety of components together to create a blog with a set of static pages."
repository = "https://github.com/AlterionX/benxu-dev"

[dependencies.page-client]
package = "static-page-builder"
version = "0.1.0"
path = "../page-client"
[dependencies.wasm-script]
package = "wasm-slideshow"
version = "0.1.0"
path = "../wasm-script"
[dependencies.blog-client]
package = "blog-client"
version = "0.1.0"
path = "../blog-client"
[dependencies.blog-login-enum]
package = "blog-login-enum"
version = "0.1.0"
path = "../blog-login-enum"
[dependencies.blog-db]
package = "blog-db"
version = "0.1.0"
path = "../blog-db"
default-features = true
[dependencies.crypto]
package = "bundled-crypto"
version = "0.1.0"
path = "../crypto"

# encoding, decoding, management
[dependencies.serde]
version = "1.0.101"
features = ["derive"]
[dependencies.serde_json]
version = "1.0.40"
[dependencies.base64]
version = "0.10.1"
[dependencies.maud]
version = "0.21.0"
features = ["rocket"]

# server + db libs
[dependencies.rocket]
version = "0.4.2"
features = ["tls"]
[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["uuid", "json", "serve", "diesel_postgres_pool"]
[dependencies.diesel]
version = "1.4.2"
features = ["postgres", "chrono", "r2d2"]

# utility structs + fns
[dependencies.simple_logger]
version = "1.3.0"
[dependencies.log]
version = "0.4.8"
features = ["std", "serde"]
[dependencies.tap]
version = "0.4.0"
[dependencies.boolinator]
version = "2.4.0"
[dependencies.chrono]
version = "0.4.9"
features = ["serde"]
[dependencies.rand]
version = "0.7.2"
[dependencies.uuid]
version = "0.7.4"
features = ["serde"]

# config
[dependencies.dotenv]
version = "0.14.1"

