[package]
name = "benxu"
version = "0.2.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"
license = "MIT"
build = "build.rs"
description = "Joins a variety of components together to create a blog with a set of static pages."
repository = "https://github.com/AlterionX/benxu-dev"

[dependencies]
serde_json = "1.0.52"
base64 = "0.12.0"
simple_logger = "1.6.0"
tap = "0.4.0"
boolinator = "2.4.0"
rand = "0.7.3"
dotenv = "0.15.0"

[dependencies.page-client]
package = "static-page-builder"
version = "0.2.1"
path = "../page-client"
features = ["rocket"]
[dependencies.login-enum]
package = "blog-login-enum"
version = "0.1.1"
path = "../blog-login-enum"
[dependencies.blog-db]
package = "blog-db"
version = "0.3.0"
path = "../blog-db"
features = ["server"]
[dependencies.crypto]
package = "bundled-crypto"
version = "0.2.1"
path = "../crypto"

# encoding, decoding, management
[dependencies.serde]
version = "1.0.106"
features = ["derive"]
[dependencies.maud]
version = "0.21.0"
features = ["rocket"]

# server + db libs
[dependencies.rocket]
version = "0.4.4"
default-features = false
features = ["tls"]
[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["uuid", "json", "serve", "diesel_postgres_pool"]
[dependencies.diesel]
version = "1.4.4"
features = ["postgres", "chrono", "r2d2"]
[dependencies.log]
version = "0.4.8"
features = ["std", "serde"]
[dependencies.chrono]
version = "0.4.11"
features = ["serde"]
[dependencies.uuid]
version = "0.8.1"
features = ["serde"]
[dependencies.structopt]
version = "0.3"
