[package]
name = "wasm-slideshow"
version = "0.1.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A WASM module for scrolling through slides on a specific page."
repository = "https://github.com/AlterionX/benxu-dev"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.55"
js-sys = "0.3.32"
[dependencies.web-sys]
version = "0.3.32"
features = [
      'Document',
      'Element',
      'HtmlElement',
      'Node',
      'NodeList',
      'Window',
      'CssStyleDeclaration',
      'EventTarget',
      'EventListener',
      'UiEvent',
      'DomTokenList',
]

