[package]
name = "blog"
version = "0.1.0"
edition = "2021"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
license = "MIT"
description = "A WASM module accessing a blog API"
repository = "https://github.com/AlterionX/benxu-dev"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.yew]
version = "0.21"
features = ["csr"]

[dependencies.yew-router]
version = "0.18"

