[package]
name = "blog"
version = "0.1.0"
edition = "2021"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
license = "MIT"
description = "A WASM module accessing a blog API"
repository = "https://github.com/AlterionX/benxu-dev"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
      'Document',
      'Element',
      'HtmlElement',
      'Node',
      'NodeList',
      'Window',
]

[dependencies.web-sys-bridge]
version = "0.1"
path = "../../lib/web-sys-bridge"

[dependencies.yew]
version = "0.21"
features = ["csr"]

[dependencies.yew-router]
version = "0.18"

