[package]
name = "wasm-slideshow"
version = "0.1.1"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A WASM module for scrolling through slides on a specific page."
repository = "https://github.com/AlterionX/benxu-dev"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
      'Document',
      'Element',
      'HtmlElement',
      'Node',
      'NodeList',
      'Window',
      'CssStyleDeclaration',
      'EventTarget',
      'EventListener',
      'UiEvent',
      'DomTokenList',
]

[dependencies.web-sys-bridge]
version = "0.1"
path = "../../lib/web-sys-bridge"
