[package]
name = "static-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
maud = "0.26"
chrono = "0.4"
sanitise-file-name = "1"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.spb]
package = "static-page-builder"
version = "0.3"
path = "../../lib/static-page-builder"

[dependencies.trc]
package = "tracing"
version = "0.1"
[dependencies.tracing-subscriber]
version = "0.3"

[dependencies.config]
version = "0.14"

[dependencies.shared-config]
path = "../../lib/shared-config"
